<resources>
    <string name="app_name">MSOCIAL</string>
    <string name="medicalField">Medical Field</string>
    <string name="phrases">Phrases</string>
    <string name="spanish">spanish</string>
    <string name="selectLenguage">Select language /Seleccione idioma / Sprache auswählen/ 选择语言/ Välj språk/ Выберите язык/ اختار اللغة</string>
    <string name="patient">patient</string>
    <string name="Patient">Patient</string>
    <string name="Profesional">Profesional</string>
    <string name="AreaMedica">Área Médica</string>
    <string name="Expresiones">Expresiones</string>
    <string name="TemasAdministrativos">Temas Administrativos</string>
    <string name="TraductorRapido">Traductor Rápido</string>
    <string name="Emergencies">Emergencies</string>
    <string name="FamilyDoctor">Family Doctor</string>
    <string name="PediatricsObstetrics">Pediatrics Obstetrics</string>
    <string name="Ear">Ear/Nasopharyngeal</string>
    <string name="OralHealth">Oral Health</string>
    <string name="Vision">Vision</string>
    <string name="Gynecology">Gynecology</string>
    <string name="Neurology">Neurology</string>
    <string name="Cardiology">Cardiology</string>
    <string name="MentalHealth">Mental Health</string>
    <string name="Digestive">Digestive</string>
    <string name="Respiratory">Respiratory</string>
    <string name="UrogenitalSystem">Urogenital System</string>
    <string name="Dermatology">Dermatology</string>
    <string name="NervousSystem">Nervous System</string>
    <string name="Traumatology">Traumatology</string>
    <string name="Urgencias">Urgencias</string>
    <string name="MedicoCabecera">Médico de Cabecera</string>
    <string name="Pediatria">Pediatría</string>
    <string name="Ginecologia">Ginecología</string>
    <string name="Otorrinología" />
    <string name="Oido">Oído/Nasofaríngeo </string>
    <string name="SaludBucal">Salud Bucal</string>
    <string name="Oftalmologia">Oftalmología</string>
    <string name="Neurologia">Neurología</string>
    <string name="Cardiologia">Cardiología</string>
    <string name="Digestivo">Digestivo</string>
    <string name="AparatoRespiratorio">Aparato Respiratorio</string>
    <string name="SistemaUrogenital">Sistema Urogenital</string>
    <string name="Dermatologia">Dermatología</string>
    <string name="Traumatologia">Traumatología</string>
    <string name="SaludMental">Salud Mental</string>
    <string name="Obstetricia">Obstetricia</string>
    <string name="Obstetrics">Obstetrics</string>
    <string name="Pediatrics">Pediatrics</string>
    <string name="selectSymptoms">Select your Symptoms</string>
    <string name="selectHistory">Select your History</string>
    <string name="selectAllergies">Select your Allergies</string>
    <string name="country_prompt">I am / Yo soy</string>
    <string name="Translatebtn">Translate/Traducir</string>
    <string name="HearTranslationbtn">Listen/Escuchar</string>
    <string name="TranslationArea">Translation/Traducción</string>
    <string name="Symptoms">Symptoms</string>
    <string name="Problems">Problems</string>
    <string name="LoadingSymptoms">Loading Symptoms. Please, wait...</string>
    <string name="LoadingProblems">Loading Problems. Please, wait...</string>
    <string name="inicio">inicio</string>
    <string name="ajustes">ajustes</string>
    <string name="AllergiesHistoryButton">Allergies / History</string>
    <string name="Indications">Indications</string>
    <string name="Listen">Listen</string>
    <string-array name="patient_professional">
        <item>Patient</item>
        <item>El Profesional</item>
    </string-array>
    <string name="response">Response:</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="SintomasPaciente">Síntomas del Paciente</string>
    <string name="Problema">Problema</string>
    <string name="SeleccioneProblema">Seleccione Problema</string>
    <string name="AlergiasHistorial">Alergias/Historial</string>
    <string name="Indicaciones">Indicaciones</string>
    <string name="ChangeUser">Change User</string>
    <string name="QuickTranslator">Quick Translator</string>
    <string name="BuscarOtros">Buscar Otros</string>
    <string name="SendToEmail">Send to e-mail</string>
    <string name="Send">Send</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="Protocol">Protocol</string>
    <string name="speech_prompt">Say something</string>
    <string name="speech_not_supported">Sorry! Your device doesn\\\'t support speech input</string>
</resources>
