<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"
        tools:ignore="AppCompatResource,MenuTitle" />
    <item
        android:id="@+id/changeActorMenu"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/ChangeUser"
        tools:ignore="AppCompatResource,MenuTitle" />
    <item
        android:id="@+id/helpMenu"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/help"
        tools:ignore="AppCompatResource,MenuTitle" />

</menu>